data/test/type_check/fail/declaration_7.v
wire x = 10;
reg r = x;
